Front Tarea 3 OK.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
             </div>
         </div>
 
+        <!-- PopUp Tarea 3 -->
+        <div id="popup3" class="popup_estilo marco">
+            <div class="contenido_popup3">
+                <span class="cerrar marco" onclick="cerrarPopUp3()">&times;</span>
+                <h3>Tarea 3</h3>
+                <p>Comparador de 3 números</p>
+                <div class="inputs_tarea3">
+                    <input class="input_estilo" type="number" placeholder="Ingrese número 1" id="num1">
+                    <input class="input_estilo" type="number" placeholder="Ingrese número 2" id="num2">
+                    <input class="input_estilo" type="number" placeholder="Ingrese número 3" id="num3">
+                    <button class="boton" onclick="evaluarNumeroTarea3()">Enviar y evaluar</button>
+                </div>
+            </div>
+
+        </div>
+
         <!-- PopUp Respuesta -->
         <div id="respuesta" class="respuesta marco">            
             <div class="contenido_respuesta">
